# doc_parser_service

./: .dockerignore  .gitignore  Dockerfile  README.md  TRACE_ID_GUIDE.md  pyproject.toml  test_trace.py
.github/workflows/: docker-image.yml
app/: main.py
app/models/: schema.py
app/routers/: parse_router.py
app/services/: download_service.py  parser_service.py  storage_service.py
app/utils/: logger.py  trace.py
