[project]
name = "doc-parser-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
]
